--- a/Mixcloud Search/index.html
+++ b/Mixcloud Search/index.html
@@ -74,7 +74,7 @@
         const storedSearch = localStorage.getItem(searchKey)
         const storedRadio = localStorage.getItem(radioKey);
 
-        //set last search if exists
+        //Set last search if exists
         if(storedSearch) {
             inputField.value = storedSearch;
         }
